fixed about spacings and glow + added icons folder

--- a/master/src/assets/styles/Expertise.scss
+++ b/master/src/assets/styles/Expertise.scss
@@ -11,10 +11,11 @@ $color-blue-dark: #1e2d3d;
   width: 950px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: -3rem;
+  margin-top: -1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-bottom: -10rem;
 
   @media (max-width: 1500px) {
     width: 800px;
@@ -25,8 +26,31 @@ $color-blue-dark: #1e2d3d;
     margin-top: 0;
   }
 
+  &::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100vw;
+    height: 3px;
+    background: linear-gradient(90deg, 
+      transparent 0%, 
+      rgba(var(--accent-color-rgb), 0.5) 15%, 
+      rgba(var(--accent-color-rgb), 1) 50%, 
+      rgba(var(--accent-color-rgb), 0.5) 85%, 
+      transparent 100%
+    );
+    box-shadow: 
+      0 0 30px rgba(var(--accent-color-rgb), 1),
+      0 0 60px rgba(var(--accent-color-rgb), 0.8),
+      0 0 90px rgba(var(--accent-color-rgb), 0.5),
+      0 0 120px rgba(var(--accent-color-rgb), 0.3);
+  }
+
   &__heading {
     @include section-heading-style;
+    margin-bottom: 10rem;
   }
 
   &__content {
@@ -54,8 +78,10 @@ $color-blue-dark: #1e2d3d;
   font-weight: 500;
   opacity: 1;
   transition: all 1.1s;
-  margin-bottom: 1rem;
-  margin-top: -2rem;
+  margin-bottom: 4rem;
+  margin-top: -14rem;
+  padding-top: 4rem;
+  padding-bottom: -2rem;
 
   @media (max-width: 1301px) {
     margin-bottom: 2rem;
@@ -64,18 +90,6 @@ $color-blue-dark: #1e2d3d;
 
   @media (max-width: 1000px) {
     margin-bottom: 1.5rem;
-  }
-
-  &__picture {
-    height: 12rem;
-    margin-bottom: 2rem;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    
-    svg {
-      transition: all 1.1s;
-    }
   }
 
   &__blurb {
@@ -111,7 +125,8 @@ $color-blue-dark: #1e2d3d;
   left: 50%;
   right: 0;
   transform: translateX(-10%);
-  margin-top: auto;
+  margin-top: -14rem;
+  padding-bottom: 5rem ;
   box-sizing: border-box;
 
   &__belt-container {
@@ -128,11 +143,14 @@ $color-blue-dark: #1e2d3d;
   &__belt {
     display: flex;
     flex-direction: row;
-    gap: 1.5rem;
     animation: scrollHorizontal 20s linear infinite;
 
-    @media (max-width: 600px) {
-      gap: 1rem;
+    & > * {
+      margin-right: 2rem;
+      
+      @media (max-width: 600px) {
+        margin-right: 1.5rem;
+      }
     }
   }
 
